--- a/orderClient/src/main/resources/application.yml
+++ b/orderClient/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+        show_sql: true
 eureka:
   instance:
     metadata-map:
