--- a/productClient/src/main/resources/application.yml
+++ b/productClient/src/main/resources/application.yml
@@ -10,12 +10,15 @@ spring:
     url: jdbc:mysql://localhost:3306/deepseek?createDatabaseIfNotExist=true
     username: root
     password: admin
+
   jpa:
     hibernate:
       ddl-auto: create-drop         # یا validate/create-drop بسته به نیازتان
+
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+        show_sql: true
 eureka:
   client:
     serviceUrl:
