--- a/productClient/src/main/resources/application.yml
+++ b/productClient/src/main/resources/application.yml
@@ -2,26 +2,13 @@ server:
   port: 8081 # ???? ?????
 
 spring:
+  config:
+    # اگر می‌خواهی اپ حتی اگر Config Server در دسترس نبود بالا بیاید از optional استفاده کن.
+    import: "optional:configserver:"
   application:
-    name: product-service # ??? ???? ???? ??????? ?? ??????
-  profiles:
-    active: dev
-  datasource:
-    url: jdbc:mysql://localhost:3306/deepseek?createDatabaseIfNotExist=true
-    username: root
-    password: admin
+    name: order-service
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop         # یا validate/create-drop بسته به نیازتان
-
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        show_sql: true
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8080/eureka/
-    healthcheck:
-      enabled: true
+  cloud:
+    config:
+      uri: http://localhost:9090    # آدرس Config Server
+      fail-fast: true               # اگر می‌خواهی در صورت عدم دسترسی فوراً خطا بدهد؛ در حالت optional می‌توان false گذاشت
